--- a/styles.css
+++ b/styles.css
@@ -495,6 +495,13 @@ div.experiment2:hover{
     border-top:1px solid #ccc;
 }
 
+@media (max-width:700px){
+    .short-news{
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
 .crd-s{
     padding: .4rem;
 }
